--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.demo.pokedox">
-
-
     <uses-permission android:name="android.permission.INTERNET"/>
 
 
@@ -15,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.JetpackComposePokedex">
         <activity
-            android:name=".MainActivity"
+            android:name=".presentation.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.JetpackComposePokedex">
